<resources>
    <string name="app_name">FragmentWithRecycler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="add_boardmate">Add BoardMate</string>
    <string name="name">Name</string>
    <string name="payable">Amount</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="expenses">Expenses</string>
    <string name="price">Price</string>
    <string name="boardmate">BoardMate</string>
    <string name="status">Status</string>
    <string name="date_started">Date Started</string>
</resources>
