<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_board_mate"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fragmentwithrecycler.mFragments.BoardMateAddFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBoardMates"
        android:text="@string/add_boardmate"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/resizeduser"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/etBName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:background="@color/colorWhite"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/address"
            android:background="@color/colorWhite"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:hint="@string/number"
            android:background="@color/colorWhite"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etPayable"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number|numberDecimal"
            android:hint="@string/payable"
            android:background="@color/colorWhite"/>
    </android.support.design.widget.TextInputLayout>
    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="onButtonSaveClicked"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"/>
    </LinearLayout>


</LinearLayout>