<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="?android:selectableItemBackground"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/resizeduser"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/imageView"/>
        <LinearLayout
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView">
            <TextView
                android:text="Rey Robert Castro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewBoardMateName"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAddress"/>
            <TextView
                android:text="@string/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNumber"/>
        </LinearLayout>
        <TextView
            android:textColor="@color/colorPrimary"
            android:text="Payable"
            android:id="@+id/textViewPayable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_below="@+id/tvStatus"
            android:layout_toEndOf="@+id/linearLayout"
            android:layout_marginTop="11dp"/>
        <TextView
        android:text="@string/amount"
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/linearLayout"
        android:layout_marginStart="16dp"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>